WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259297
[Cocoa] Small canvases, which aren't supposed to get compositing layers, get compositing layers if they have a 3D-but-could-be-2D transform
https://bugs.webkit.org/show_bug.cgi?id=259297
Summary
[Cocoa] Small canvases, which aren't supposed to get compositing layers, get ...
Myles C. Maxfield
Reported
2023-07-17 17:40:11 PDT
[Cocoa] Small canvases, which aren't supposed to get compositing layers, get compositing layers if they have a 3D-but-could-be-2D transform
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-07-17 17:40:41 PDT
<
rdar://problem/112439265
>
Myles C. Maxfield
Comment 2
2023-07-17 17:48:23 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15899
EWS
Comment 3
2023-07-18 11:28:49 PDT
Committed
266135@main
(3dfb58beb215): <
https://commits.webkit.org/266135@main
> Reviewed commits have been landed. Closing PR #15899 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug